syntax = "proto3";

import "user.proto";

import "google/protobuf/timestamp.proto";
import "rpc_user.proto";

package pb;

option go_package = "github.com/escalopa/gobank/pb";

message LoginRequest {
  Username Username = 1;
  string Password = 2;
}

message LoginResponse {
  string SessionID = 1;
  string AccessToken = 2;
  google.protobuf.Timestamp AccessTokenExpiresAt = 4;
  string RefreshToken = 3;
  google.protobuf.Timestamp RefreshTokenExpiresAt = 5;
  UserResponse User = 6;
}

message LogoutRequest { Username Username = 1; }

message LogoutResponse { Username Username = 1; }